# context9

./: .dockerignore  .env_example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  config_example.yaml  context9.db  pyproject.toml
.github/workflows/: docker-build.yml
context9/: __init__.py  server.py
context9/api/: __init__.py  admin.py  api_keys.py  mcp_proxy.py  repositories.py
context9/auth/: __init__.py  admin_auth.py  auth_middleware.py  encryption.py  mcp_auth.py  password.py
context9/database/: __init__.py  database.py  init_db.py  models.py
context9/mcp_server/: __init__.py  config.py  github_client.py  mcp_server.py  mcp_tools.py
context9/mcp_server/client/: __init__.py  client.py
context9/mcp_server/github_client/: github_client.py
context9/mcp_server/markdown/: __init__.py  markdown_rewriter.py
context9/utils/: __init__.py  datetime_utils.py
docker/: Dockerfile  Dockerfile-cli
docs/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-HK.md
gui/: FRONTEND_DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx
gui/src/locales/: ar.ts  en.ts  (+5 more)
scripts/: README.md  start.py  start.sh  start_context9.md  start_dev.py
template_repo/: agent_develop.json  agent_tutorial.json
tests/: __init__.py  test_config.py  test_github_client.py  test_markdown_rewriter.py  test_server.py  test_url_parser.py
web/: index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
web/src/: App.tsx
(+60 files in other folders)
